# material-assistent

./: .gitignore  CHANGELOG.md  README.md  insperctor-runner.txt  max.json  pyproject.toml
agents/: m3gnet-finetuner.md  m3gnet-finetuner.oc.md
skills/: dataset-creator.md  dataset-expert.md  fine-tuning-expert.md  max-phase-expert.md
src/material_assistent/: agent.py  main.py
src/matgl-assistant/: material-assistant.py
src/matgl-mcp/: formula_analyze.py  matgl_mcp_server.py  matgl_model.py
test-cases/: functional-tests.md  module-dataset-expert.md  module-fine-tuning-expert.md  module-formation-energy-prediction.md  module-max-phase-expert.md
