[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "material-assistent"
version = "0.1.0"
description = "Агент-материаловед"
readme = "README.md"
authors = [
    {name = "Roman"}
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "qwen-agent",
    "soundfile"
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.7.0",
    "mypy>=1.13",
    "pre-commit>=4.0",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24.0"
]
doc = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.scripts]
mat-assist = "material_assistent.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["material_assistent*"]
exclude = ["tests*"]

# Настройки Black (форматирование)
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs         # исключаем стандартные директории
  | \.git
  | \.venv
)/
'''

# Настройки Ruff (линтер)
[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "B", "C4", "ARG"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

# Настройки mypy (статическая типизация)
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# Настройки pytest
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

# Маркеры для тестов
markers = [
    "slow: тесты которые выполняются долго",
    "integration: интеграционные тесты",
    "unit: модульные тесты",
]

# Настройки coverage
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
]
